// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/core/collapsible-sidebar/CollapsibleSidebar render 1`] = `
<CollapsibleSidebarLogo
  className="foo"
  collapsedElement={
    <span
      className="collapsed"
    >
      abc
    </span>
  }
  expanded={true}
  expandedElement={
    <span
      className="expanded"
    >
      abc
    </span>
  }
>
  <CollapsibleSidebarLogo
    className="foo"
    collapsedElement={
      <span
        className="collapsed"
      >
        abc
      </span>
    }
    expanded={true}
    expandedElement={
      <span
        className="expanded"
      >
        abc
      </span>
    }
    intl={
      Object {
        "formatDate": [Function],
        "formatMessage": [Function],
        "formatRelativeTime": [Function],
      }
    }
  >
    <div
      className="bdl-CollapsibleSidebar-logo foo"
    >
      <CollapsibleSidebarItem
        collapsedElement={
          <CollapsibleSidebarLogo__StyledToggleButton
            aria-label="Collapse"
            className="bdl-CollapsibleSidebar-toggleButton"
            type="button"
          >
            <CollapsibleSidebarLogo__StyledIconHamburger
              height={20}
              width={20}
            />
          </CollapsibleSidebarLogo__StyledToggleButton>
        }
        expanded={true}
        expandedElement={
          <React.Fragment>
            <CollapsibleSidebarLogo__StyledToggleButton
              aria-label="Collapse"
              className="bdl-CollapsibleSidebar-toggleButton"
              type="button"
            >
              <CollapsibleSidebarLogo__StyledIconHamburger
                height={20}
                width={20}
              />
            </CollapsibleSidebarLogo__StyledToggleButton>
            <LinkBase
              className="bdl-CollapsibleSidebar-logoLink"
            >
              <React.Fragment>
                <CollapsibleSidebarLogo__StyledLogo
                  className="bdl-CollapsibleSidebar-logoIcon"
                  height={42}
                  width={71}
                />
              </React.Fragment>
            </LinkBase>
          </React.Fragment>
        }
      >
        <CollapsibleSidebarLogo__StyledToggleButton
          aria-label="Collapse"
          className="bdl-CollapsibleSidebar-toggleButton"
          type="button"
        >
          <PlainButton
            aria-label="Collapse"
            className="CollapsibleSidebarLogo__StyledToggleButton-sc-6amevi-2 ehAKgQ bdl-CollapsibleSidebar-toggleButton"
            type="button"
          >
            <button
              aria-label="Collapse"
              className="btn-plain CollapsibleSidebarLogo__StyledToggleButton-sc-6amevi-2 ehAKgQ bdl-CollapsibleSidebar-toggleButton"
              type="button"
            >
              <CollapsibleSidebarLogo__StyledIconHamburger
                height={20}
                width={20}
              >
                <IconHamburger
                  className="CollapsibleSidebarLogo__StyledIconHamburger-sc-6amevi-1 jjgzkm"
                  height={20}
                  width={20}
                >
                  <AccessibleSVG
                    className="icon-hamburger CollapsibleSidebarLogo__StyledIconHamburger-sc-6amevi-1 jjgzkm"
                    height={20}
                    viewBox="0 0 24 24"
                    width={20}
                  >
                    <svg
                      className="icon-hamburger CollapsibleSidebarLogo__StyledIconHamburger-sc-6amevi-1 jjgzkm"
                      focusable="false"
                      height={20}
                      role="presentation"
                      viewBox="0 0 24 24"
                      width={20}
                    >
                      <path
                        className="fill-color"
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                        fill="#000"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </AccessibleSVG>
                </IconHamburger>
              </CollapsibleSidebarLogo__StyledIconHamburger>
            </button>
          </PlainButton>
        </CollapsibleSidebarLogo__StyledToggleButton>
        <LinkBase
          className="bdl-CollapsibleSidebar-logoLink"
        >
          <a
            className="bdl-CollapsibleSidebar-logoLink"
            href="#"
          >
            <CollapsibleSidebarLogo__StyledLogo
              className="bdl-CollapsibleSidebar-logoIcon"
              height={42}
              width={71}
            >
              <BoxLogo
                className="CollapsibleSidebarLogo__StyledLogo-sc-6amevi-0 jTcBgl bdl-CollapsibleSidebar-logoIcon"
                height={42}
                width={71}
              >
                <AccessibleSVG
                  className="CollapsibleSidebarLogo__StyledLogo-sc-6amevi-0 jTcBgl bdl-CollapsibleSidebar-logoIcon"
                  height={42}
                  viewBox="0 0 461 244"
                  width={71}
                >
                  <svg
                    className="CollapsibleSidebarLogo__StyledLogo-sc-6amevi-0 jTcBgl bdl-CollapsibleSidebar-logoIcon"
                    focusable="false"
                    height={42}
                    role="presentation"
                    viewBox="0 0 461 244"
                    width={71}
                  >
                    <path
                      d="M17.142.304c9.379 0 17.001 7.482 17.171 16.828v72.33c14.39-10.786 32.224-17.171 51.528-17.171 32.876 0 61.451 18.479 75.853 45.611 14.398-27.132 42.987-45.611 75.84-45.611 47.399 0 85.85 38.427 85.85 85.839 0 47.434-38.451 85.87-85.85 85.87-32.853 0-61.442-18.496-75.84-45.602C147.292 225.504 118.717 244 85.841 244 38.884 244 .775 206.327.019 159.561H0V17.132C.215 7.786 7.763.304 17.142.304zm409.635 79.753c6.318-7.341 17.773-8.792 25.938-3.132 8.155 5.613 9.848 16.176 3.942 23.742l-46.723 57.351 46.666 57.24c5.918 7.587 4.217 18.12-3.939 23.755-8.164 5.637-19.617 4.202-25.941-3.15l-40.139-49.196-40.162 49.196c-6.252 7.352-17.779 8.787-25.919 3.15-8.14-5.635-9.841-16.168-3.905-23.755h-.016l46.638-57.24-46.638-57.351h.016c-5.936-7.566-4.235-18.124 3.905-23.742 8.14-5.66 19.667-4.209 25.919 3.132v-.012l40.162 49.264 40.196-49.264zm-189.243 26.605c-28.45 0-51.518 23.042-51.518 51.468 0 28.45 23.068 51.497 51.518 51.497 28.438 0 51.494-23.047 51.494-51.497 0-28.426-23.056-51.468-51.494-51.468zm-151.693 0c-28.444 0-51.528 23.042-51.528 51.479 0 28.445 23.084 51.486 51.528 51.486 28.441 0 51.477-23.047 51.477-51.497 0-28.426-23.036-51.468-51.477-51.468z"
                      fill="#0061d5"
                      fillRule="evenodd"
                    />
                  </svg>
                </AccessibleSVG>
              </BoxLogo>
            </CollapsibleSidebarLogo__StyledLogo>
          </a>
        </LinkBase>
      </CollapsibleSidebarItem>
    </div>
  </CollapsibleSidebarLogo>
</CollapsibleSidebarLogo>
`;

exports[`components/core/collapsible-sidebar/CollapsibleSidebar render 2`] = `
<CollapsibleSidebarLogo
  canEndTrial={true}
>
  <CollapsibleSidebarLogo
    canEndTrial={true}
    intl={
      Object {
        "formatDate": [Function],
        "formatMessage": [Function],
        "formatRelativeTime": [Function],
      }
    }
  >
    <div
      className="bdl-CollapsibleSidebar-logo"
    >
      <CollapsibleSidebarItem
        collapsedElement={
          <CollapsibleSidebarLogo__StyledToggleButton
            aria-label="Expand"
            className="bdl-CollapsibleSidebar-toggleButton"
            type="button"
          >
            <CollapsibleSidebarLogo__StyledIconHamburger
              height={20}
              width={20}
            />
          </CollapsibleSidebarLogo__StyledToggleButton>
        }
        expandedElement={
          <React.Fragment>
            <CollapsibleSidebarLogo__StyledToggleButton
              aria-label="Expand"
              className="bdl-CollapsibleSidebar-toggleButton"
              type="button"
            >
              <CollapsibleSidebarLogo__StyledIconHamburger
                height={20}
                width={20}
              />
            </CollapsibleSidebarLogo__StyledToggleButton>
            <LinkBase
              className="bdl-CollapsibleSidebar-logoLink"
            >
              <React.Fragment>
                <CollapsibleSidebarLogo__StyledLogo
                  className="bdl-CollapsibleSidebar-logoIcon"
                  height={42}
                  width={71}
                />
              </React.Fragment>
            </LinkBase>
          </React.Fragment>
        }
      >
        <Tooltip
          constrainToScrollParent={false}
          constrainToWindow={true}
          isDisabled={true}
          isTabbable={false}
          position="middle-right"
          theme="default"
        >
          <CollapsibleSidebarLogo__StyledToggleButton
            aria-label="Expand"
            className="bdl-CollapsibleSidebar-toggleButton"
            type="button"
          >
            <PlainButton
              aria-label="Expand"
              className="CollapsibleSidebarLogo__StyledToggleButton-sc-6amevi-2 ehAKgQ bdl-CollapsibleSidebar-toggleButton"
              type="button"
            >
              <button
                aria-label="Expand"
                className="btn-plain CollapsibleSidebarLogo__StyledToggleButton-sc-6amevi-2 ehAKgQ bdl-CollapsibleSidebar-toggleButton"
                type="button"
              >
                <CollapsibleSidebarLogo__StyledIconHamburger
                  height={20}
                  width={20}
                >
                  <IconHamburger
                    className="CollapsibleSidebarLogo__StyledIconHamburger-sc-6amevi-1 jjgzkm"
                    height={20}
                    width={20}
                  >
                    <AccessibleSVG
                      className="icon-hamburger CollapsibleSidebarLogo__StyledIconHamburger-sc-6amevi-1 jjgzkm"
                      height={20}
                      viewBox="0 0 24 24"
                      width={20}
                    >
                      <svg
                        className="icon-hamburger CollapsibleSidebarLogo__StyledIconHamburger-sc-6amevi-1 jjgzkm"
                        focusable="false"
                        height={20}
                        role="presentation"
                        viewBox="0 0 24 24"
                        width={20}
                      >
                        <path
                          className="fill-color"
                          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                          fill="#000"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </AccessibleSVG>
                  </IconHamburger>
                </CollapsibleSidebarLogo__StyledIconHamburger>
              </button>
            </PlainButton>
          </CollapsibleSidebarLogo__StyledToggleButton>
        </Tooltip>
      </CollapsibleSidebarItem>
    </div>
  </CollapsibleSidebarLogo>
</CollapsibleSidebarLogo>
`;
